# jemalloc-1

./: .gitignore  CMakeLists.txt
include/jemalloc/: jemalloc_defs.h.in  jemalloc_macros.h.in
include/jemalloc/internal/: jemalloc_internal_defs.h.in
tests/: calloc.c  malloc.c  printpagesize.c  realloc.c
